force-app/main/default/objects/Flight_Price_Alert__c/Flight_Price_Alert__c.object-meta.xml
<CustomObject>
    <label>Flight Price Alert</label>
    <nameField>
        <label>Alert Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Flight Price Alerts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>