force-app/main/default/objects/Flight_Price_Alert__c/fields/Adults__c.field-meta.xml
<CustomField>
    <fullName>Adults__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Number of Adults</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>