force-app/main/default/objects/Flight_Price_Alert__c/fields/Alert_Email__c.field-meta.xml
<CustomField>
    <fullName>Alert_Email__c</fullName>
    <label>Alert Email</label>
    <type>Email</type>
</CustomField>