force-app/main/default/objects/Flight_Price_Alert__c/fields/Departure_Date__c.field-meta.xml
<CustomField>
    <fullName>Departure_Date__c</fullName>
    <label>Departure Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>