force-app/main/default/objects/Flight_Price_Alert__c/fields/Destination_Airport__c.field-meta.xml
<CustomField>
    <fullName>Destination_Airport__c</fullName>
    <label>Destination Airport</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
</CustomField>