force-app/main/default/objects/Flight_Price_Alert__c/fields/Last_Check_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Check_Date__c</fullName>
    <label>Last Check Date</label>
    <type>Date</type>
</CustomField>