force-app/main/default/objects/Flight_Price_Alert__c/fields/Last_Good_Price__c.field-meta.xml
<CustomField>
    <fullName>Last_Good_Price__c</fullName>
    <label>Last Good Price Found</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>