force-app/main/default/objects/Flight_Price_Alert__c/fields/Max_Price__c.field-meta.xml
<CustomField>
    <fullName>Max_Price__c</fullName>
    <label>Maximum Price</label>
    <precision>8</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>