force-app/main/default/objects/Flight_Price_Alert__c/fields/Origin_Airport__c.field-meta.xml
<CustomField>
    <fullName>Origin_Airport__c</fullName>
    <label>Origin Airport</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
</CustomField>